Cookies forward redirect

--- a/mywebapp/src/main/webapp/index.html
+++ b/mywebapp/src/main/webapp/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>My first page</title>
 </head>
 <body>
-      <h1>Current date and time</h1>
-      <span style="color:red "> My first servlet   </span>
+
+    <h1>Current Date & Time is : <span style="color: blue"> 09 july 2019 5:22 pm IST</span></h1>
+    <a href="./search?id=1">EmployeeSearch</a><br>
+      <a href=" ./currentDate">index</a><br>
+       <a href="http:// Mywebpp-env.63yi5ymmnp.ap-south-1.elasticbeanstalk.com/insert">EmployeeInfo</a>
 </body>
 </html>
