--- a/Html/BootStrapAssinment/EmployeeAddressInformation.html
+++ b/Html/BootStrapAssinment/EmployeeAddressInformation.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <form  class="col-md-10 offset-1" style="background-color : rgb(236, 236, 114)">
-                <h3 style="text-align: center;padding: 20px;">Employee Information</h3>
+                <h3 style="text-align: center;padding: 20px;">Employee OtherInfo</h3>
                 <hr>   
             <div class="form-row">
                   <div class="form-group col-md-6">
